API & build fixes

--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -36,21 +36,25 @@ IF (SWIG_FOUND)
     SET (ZORBA_SWIG_LIB_PREFIX "lib")
   ENDIF (APPLE AND CMAKE_MINOR_VERSION GREATER 6)
 
-  ADD_SUBDIRECTORY (python)
-
+  IF (NOT ZORBA_SUPPRESS_PYTHON)
+    ADD_SUBDIRECTORY (python)
+  ENDIF (NOT ZORBA_SUPPRESS_PYTHON)
   IF (NOT ZORBA_SUPPRESS_PHP)
     ADD_SUBDIRECTORY (php)
   ENDIF (NOT ZORBA_SUPPRESS_PHP)
-
-  ADD_SUBDIRECTORY (java)
-  ADD_SUBDIRECTORY (xqj)
-  ADD_SUBDIRECTORY (csharp)
-  
-  IF (APPLE AND UNIVERSAL)
-    MESSAGE (STATUS "Ruby module can't be built Universal")
-  ELSE(APPLE AND UNIVERSAL)
-    MESSAGE (STATUS "Ruby module being built non-Universal")
-    ADD_SUBDIRECTORY (ruby)
-  ENDIF (APPLE AND UNIVERSAL)
-
+  IF (NOT ZORBA_SUPPRESS_JAVA)
+    ADD_SUBDIRECTORY (java)
+    ADD_SUBDIRECTORY (xqj)
+  ENDIF (NOT ZORBA_SUPPRESS_JAVA)
+  IF (NOT ZORBA_SUPPRESS_CSHARP)
+    ADD_SUBDIRECTORY (csharp)
+  ENDIF (NOT ZORBA_SUPPRESS_CSHARP)
+  IF (NOT ZORBA_SUPPRESS_RUBY)
+    IF (APPLE AND UNIVERSAL)
+      MESSAGE (STATUS "Ruby module can't be built Universal")
+    ELSE(APPLE AND UNIVERSAL)
+      MESSAGE (STATUS "Ruby module being built non-Universal")
+      ADD_SUBDIRECTORY (ruby)
+    ENDIF (APPLE AND UNIVERSAL)
+  ENDIF (NOT ZORBA_SUPPRESS_RUBY)
 ENDIF (SWIG_FOUND)
