--- a/swig/java/CMakeLists.txt
+++ b/swig/java/CMakeLists.txt
@@ -53,6 +53,8 @@ IF (JAVA_INCLUDE_PATH)
   FOREACH(ZORBA_API_HEADER ${ZORBA_API_HEADERS})
     CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/../${ZORBA_API_HEADER}"  "${CMAKE_CURRENT_BINARY_DIR}/${ZORBA_API_HEADER}")
   ENDFOREACH(ZORBA_API_HEADER ${ZORBA_API_HEADERS})
+  
+  INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )
 
   #STREAM WRAPPER
   FILE(GLOB ZORBA_JAVA_EXTRAS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/" "${CMAKE_CURRENT_SOURCE_DIR}/*.java")
