--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
               -DCMAKE_CXX_FLAGS='-DU_USING_ICU_NAMESPACE=1' \
               -DCMAKE_CXX_STANDARD=14 \
               -DCMAKE_CXX_STANDARD_REQUIRED=ON \
-              -DCMAKE_INSTALL_PREFIX=$(pwd)/install"
+              -DCMAKE_INSTALL_PREFIX=$(pwd)/install
               -DCMAKE_INSTALL_RPATH=$ORIGIN/ \
               -DZORBA_FOR_ONE_THREAD_ONLY=OFF \
               -DZORBA_SUPPRESS_CSHARP=ON \
