--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: |
-        mkdir build && cd build
+        mkdir build
+        cd build
         cmake -DCMAKE_BUILD_TYPE=Release \
               -DCMAKE_CXX_EXTENSIONS=OFF \
               -DCMAKE_CXX_FLAGS='-DU_USING_ICU_NAMESPACE=1' \
