--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ jobs:
     - run: |
         mkdir build
         cd build
+        echo $(pwd)
+        ls ..
+        ls ../..
         cmake -DCMAKE_BUILD_TYPE=Release \
               -DCMAKE_CXX_EXTENSIONS=OFF \
               -DCMAKE_CXX_FLAGS='-DU_USING_ICU_NAMESPACE=1' \
